{
    "name": "InputSystemMap",
    "maps": [
        {
            "name": "Input",
            "id": "77b96269-f192-4ecf-839f-6fadaf1b1cfc",
            "actions": [
                {
                    "name": "TouchPos",
                    "type": "Value",
                    "id": "eebe9e39-2818-4349-a3eb-46d3cc37dc1c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchScreenPos",
                    "type": "Value",
                    "id": "490dd99a-66c1-458d-937e-b3f84566a1d8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchPosRelese",
                    "type": "Value",
                    "id": "9b05462f-cb38-4705-ab8e-c8124d1b3f3f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SingleTouch",
                    "type": "Button",
                    "id": "4bee9bc1-7e3a-4670-92b1-73a2aa95e549",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "TouchRelese",
                    "type": "Button",
                    "id": "f1546e63-6d05-437e-ab07-a96f7ecb3bd1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5c3433c2-ef4e-4c27-807b-52a7662a7bf4",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eb25981c-06c1-4cfe-9360-e4853f03cb82",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "SingleTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "28e6d95e-a8bd-45f8-954a-ee27e3aa4fe1",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "TouchRelese",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "380ccad7-2150-49a3-8d45-295fa910995a",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosRelese",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b7f83843-12df-4dfe-af4e-fea46ae89696",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "TouchScreenPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}